Fix issues with sidebar spacing

--- a/f5_sphinx_theme/static/css/f5-theme.css
+++ b/f5_sphinx_theme/static/css/f5-theme.css
@@ -101,7 +101,7 @@ a.headerlink:hover {
 
 #sidebar, .section-nav {
   min-width: 256px;
-  max-width: 256px;
+  max-width: 325px;
   height: 85vh;
   max-height: 100vh;
   transition: all 0.3s;
@@ -109,7 +109,7 @@ a.headerlink:hover {
   float: left;
   margin-right: 40px;
   margin-bottom: 256px;
-  /*margin-top: 24px;*/
+  margin-top: 22px;
   overflow-x: scroll;
   overflow-y: scroll;
   padding: 16px 12px 16px 16px;
